# discord_bot

./: .env  .gitignore  LICENSE  README.md  cspell.json  pyproject.toml
src/: __main__.py  discord_bot_handler.py  discord_broker.py
src/const/: command.py  config.py  message.py
src/lib/: local_logger.py  props_finder.py
src/voicevox/: voicevox_broker.py
