[project]
name = "disdord-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "FloriaTOTSUKA", email = "floriatotsuka@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "discord[voice]>=2.3.2",
    "pyNaCl>=1.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "black>=23.10.1",
    "python-dotenv>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true
